2015-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-{kpathsea,ptexenc}-flags.m4: Use pkg-config.
	* kpse-common.m4 (_KPSE_PKG_CONFIG_FLAGS): Common code.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (KPSE_COMMON): Drop checks for strcasecmp,
	strtol, and strstr.

2015-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-win32.m4: Define KPSE_DO_IF_WIN32 for WIN32 only tests.

2015-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-cairo-flags.m4: Require KPSE_PIXMAN_FLAGS.
	* kpse-poppler-flags.m4: Require KPSE_ZLIB_FLAGS.
	* kpse-teckit-flags.m4: Use pkg-config.

2015-02-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Add musixtnt.

2015-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4: Disable LuaJITTeX for powerpc-*-darwin*.

2014-12-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Move lacheck from here ...
	(kpse_utils_pkgs): ... to here.

2014-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Move devnag from here ...
	(kpse_utils_pkgs): ... to here.

2014-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Rename ps2pkm => ps2pk.

2014-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-options.m4: Set platform name to ${host_alias-$host}.

2014-12-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: LuaJIT is now a Libtool library.

2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-visibility.m4: Also try -fvisibility-inlines-hidden.

2014-11-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-win32.m4: Check for WIN64 and AC_SUBST([WIN_WRAPPER]).

2014-10-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-lua52-flags.m4: Lua52 is now a Libtool library.
	* kpse-dll-name.m4: New file to specify MinGW/Cygwin DLL names.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-gmp-flags.m4, kpse-mpfr-flags.m4: New files.