@@ -12,8 +12,6 @@
 # Set the make variables GRAPHITE2_INCLUDES and GRAPHITE2_LIBS to the CPPFLAGS and
 # LIBS required for the `-lgraphite2' library in libs/graphite2/ of the TL tree.
 AC_DEFUN([KPSE_GRAPHITE2_FLAGS], [dnl
-AC_REQUIRE([KPSE_FREETYPE2_FLAGS])[]dnl
-AC_REQUIRE([KPSE_ICU_FLAGS])[]dnl
 _KPSE_LIB_FLAGS([graphite2], [graphite2], [],
                 [-IBLD/libs/graphite2/include -DGRAPHITE2_STATIC],
                 [BLD/libs/graphite2/libgraphite2.a], [],
